Fix Timeline Alignment & Fix Banner Alt Text Sizing Conflict

--- a/SCSS/Theme Rewrite/custom-css/callouts/_callout-type-timeline.scss
+++ b/SCSS/Theme Rewrite/custom-css/callouts/_callout-type-timeline.scss
@@ -6,6 +6,7 @@
     --callout-padding: 0;
     --callout-title-padding: 10px;
     --callout-content-padding: 10px;
+    --callout-margin: 0;
     --timeline-shadow: var(--outline, var(--background-modifier-box-shadow));
     
     --micro: 50px;
