--- a/Snippets/S - Callouts.css
+++ b/Snippets/S - Callouts.css
@@ -1317,6 +1317,7 @@ body:not(.callout-no-metadata) .callout.callout[data-callout~=Metadata i]:is([da
   --callout-padding: 0;
   --callout-title-padding: 10px;
   --callout-content-padding: 10px;
+  --callout-margin: 0;
   --timeline-shadow: var(--outline, var(--background-modifier-box-shadow));
   --micro: 50px;
   --tiny: 100px;
