--- a/theme.css
+++ b/theme.css
@@ -7162,8 +7162,8 @@ img:is([alt~=lp], [alt~=live-preview]):is([alt*=left], [alt*=locl]),
 }
 
 /*Banners*/
-img[alt*=banner],
-.image-embed[alt*=banner] img {
+img[alt*=banner]:not([width]),
+.image-embed[alt*=banner]:not([width]) img {
   display: block;
   object-fit: cover;
   width: 100%;
@@ -9825,6 +9825,7 @@ body:not(.callout-no-metadata) .callout.callout[data-callout~=Metadata i]:is([da
   --callout-padding: 0;
   --callout-title-padding: 10px;
   --callout-content-padding: 10px;
+  --callout-margin: 0;
   --timeline-shadow: var(--outline, var(--background-modifier-box-shadow));
   --micro: 50px;
   --tiny: 100px;
